[gd_scene load_steps=27 format=3 uid="uid://bljbeavu5chvn"]

[ext_resource type="FontFile" uid="uid://cwqhd35lj1ldk" path="res://assets/fonts/dogica/TTF/dogicabold.ttf" id="1_5awlp"]
[ext_resource type="Script" path="res://scripts/menus/settings_menu.gd" id="1_cd5ta"]
[ext_resource type="Texture2D" uid="uid://ph5ygitg8am6" path="res://assets/sprites/ui/pause_menu/pausemenu.png" id="2_neemc"]
[ext_resource type="AudioStream" uid="uid://b8luqji76qho8" path="res://assets/sfx/click-21156.mp3" id="2_o1bfv"]
[ext_resource type="FontFile" uid="uid://cqnbm45upx3g5" path="res://assets/fonts/digital_disco/DigitalDisco.ttf" id="2_orcx4"]
[ext_resource type="FontFile" uid="uid://bgmrs2blo34xn" path="res://assets/fonts/silkscreen/slkscr.ttf" id="3_6uqgs"]
[ext_resource type="Texture2D" uid="uid://cqakpcp6lo7bu" path="res://assets/sprites/ui/settings_menu/barborder.png" id="4_igpw4"]
[ext_resource type="Texture2D" uid="uid://dk28ot4oi6a6n" path="res://assets/sprites/ui/settings_menu/Barball.png" id="4_ttesq"]
[ext_resource type="Texture2D" uid="uid://dw3tbqil5u5j0" path="res://assets/sprites/ui/settings_menu/barjuice.png" id="5_8iptr"]
[ext_resource type="Texture2D" uid="uid://drmt2eatxcosr" path="res://assets/sprites/ui/settings_menu/tickbox.png" id="8_jo3ua"]
[ext_resource type="Texture2D" uid="uid://uwrype5kdssl" path="res://assets/sprites/ui/settings_menu/tick.png" id="9_j0nlt"]
[ext_resource type="Texture2D" uid="uid://65ksaoemcsyi" path="res://assets/sprites/ui/settings_menu/apply_button.png" id="11_5vmuo"]

[sub_resource type="LabelSettings" id="LabelSettings_ruwn4"]
font = ExtResource("1_5awlp")
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hsks"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_right = 20
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="LabelSettings" id="LabelSettings_fwlip"]
font = ExtResource("2_orcx4")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_5trek"]
color = Color(0, 0, 0, 0)
thickness = 15

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6ladb"]
texture = ExtResource("5_8iptr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yjihm"]
texture = ExtResource("5_8iptr")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujpok"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_right = 1
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fjnuj"]
color = Color(0, 0, 0, 0)
thickness = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_57dq4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6jg2q"]
atlas = ExtResource("11_5vmuo")
region = Rect2(0, 0, 58, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_722kl"]
texture = SubResource("AtlasTexture_6jg2q")
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_rg3wb"]
atlas = ExtResource("11_5vmuo")
region = Rect2(58, 0, 58, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_32h52"]
texture = SubResource("AtlasTexture_rg3wb")
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xewcb"]

[node name="SettingsMenu" type="Control" groups=["SettingsMenu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cd5ta")

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_o1bfv")
volume_db = -5.0
bus = &"Sfx"

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_neemc")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -135.0
offset_right = 96.0
offset_bottom = -111.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = SubResource("LabelSettings_ruwn4")

[node name="Settings" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -61.0
offset_right = 126.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="SfxVolume" type="HSplitContainer" parent="Settings"]
layout_mode = 2
split_offset = 60
dragger_visibility = 1

[node name="SettingText" type="Label" parent="Settings/SfxVolume"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0hsks")
text = "Sfx Volume"
label_settings = SubResource("LabelSettings_fwlip")

[node name="SfxVolumeSlider" type="HSlider" parent="Settings/SfxVolume"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("4_ttesq")
theme_override_icons/grabber_highlight = ExtResource("4_ttesq")
theme_override_icons/tick = ExtResource("4_igpw4")
theme_override_styles/slider = SubResource("StyleBoxLine_5trek")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_6ladb")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_yjihm")
min_value = -80.0
max_value = 20.0
step = 10.0
tick_count = 3

[node name="MusicVolume" type="HSplitContainer" parent="Settings"]
layout_mode = 2
dragger_visibility = 1

[node name="SettingText" type="Label" parent="Settings/MusicVolume"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ujpok")
text = "Music Volume"
label_settings = SubResource("LabelSettings_fwlip")

[node name="MusicVolumeSlider" type="HSlider" parent="Settings/MusicVolume"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("4_ttesq")
theme_override_icons/grabber_highlight = ExtResource("4_ttesq")
theme_override_icons/tick = ExtResource("4_igpw4")
theme_override_styles/slider = SubResource("StyleBoxLine_fjnuj")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_6ladb")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_yjihm")
min_value = -80.0
max_value = 20.0
step = 10.0
value = -20.0
tick_count = 3

[node name="Clouds" type="HSplitContainer" parent="Settings"]
layout_mode = 2
dragger_visibility = 1

[node name="SettingText" type="Label" parent="Settings/Clouds"]
layout_mode = 2
text = "Clouds Enabled"
label_settings = SubResource("LabelSettings_fwlip")

[node name="CloudEnableBox" type="CheckBox" parent="Settings/Clouds"]
layout_mode = 2
theme_override_icons/checked = ExtResource("9_j0nlt")
theme_override_icons/unchecked = ExtResource("8_jo3ua")
theme_override_styles/focus = SubResource("StyleBoxEmpty_57dq4")
button_pressed = true

[node name="FullScreen" type="HSplitContainer" parent="Settings"]
layout_mode = 2
dragger_visibility = 1

[node name="SettingText" type="Label" parent="Settings/FullScreen"]
layout_mode = 2
text = "Fullscreen"
label_settings = SubResource("LabelSettings_fwlip")

[node name="FullscreenEnableBox" type="CheckBox" parent="Settings/FullScreen"]
layout_mode = 2
theme_override_icons/checked = ExtResource("9_j0nlt")
theme_override_icons/unchecked = ExtResource("8_jo3ua")
theme_override_styles/focus = SubResource("StyleBoxEmpty_57dq4")
button_pressed = true

[node name="ApplySettings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = 39.0
offset_right = 42.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_6uqgs")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxTexture_722kl")
theme_override_styles/hover = SubResource("StyleBoxTexture_722kl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_32h52")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xewcb")
text = "Apply"

[connection signal="drag_ended" from="Settings/SfxVolume/SfxVolumeSlider" to="." method="_on_sfx_volume_slider_drag_ended"]
[connection signal="drag_ended" from="Settings/MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_slider_drag_ended"]
[connection signal="pressed" from="Settings/Clouds/CloudEnableBox" to="." method="_on_cloud_enable_box_pressed"]
[connection signal="pressed" from="Settings/FullScreen/FullscreenEnableBox" to="." method="_on_fullscreen_enable_box_pressed"]
[connection signal="pressed" from="ApplySettings" to="." method="_on_apply_settings_pressed"]
